--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "ganache-core": "2.0.2",
+    "ganache-core": "git+https://github.com/kinfoundation/ganache-core.git",
     "yargs": "^7.0.2"
   },
   "repository": {
